--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    Made by Bhawish Dhanjani ❤
   </footer>
   <script type="text/javascript" src="index.js"></script>
 </body>
